# AT82.08-AI-Generated-Image-Classification

./: .gitignore  README.md  cnn_training.ipynb  color_analysis.ipynb  evaluation.ipynb  gabor_analysis.ipynb  hog_analysis.ipynb  lbp_analysis.ipynb  ml_training.ipynb  plot_sample_algo.ipynb  pyproject.toml  test.ipynb  test2.ipynb  test_gpu.ipynb  test_load_speed copy.ipynb  test_load_speed.ipynb
data/: color_features_test.csv  color_features_train.csv  gabor_features_test.csv  gabor_features_train.csv  hog_features_test.csv  hog_features_train.csv  lbp_features_test.csv  lbp_features_train.csv
outputs/: color_classification_results.json  gabor_classification_results.json  hog_classification_results.json  lbp_classification_results.json
outputs/models/All/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/All_noColor/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/All_noGabor/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/All_noHOG/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/All_noLBP/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/Color/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/Gabor/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/Gabor+Color/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  LogisticRegression.joblib  RandomForestClassifier.joblib  metrics.json
outputs/models/HOG/: GaussianNB.joblib  KNeighborsClassifier.joblib  LGBMClassifier.joblib  (+3 more)
outputs/models_deep/: cnn_new_state_dict.joblib  cnn_new_state_dict.pt  cnn_original_state_dict.joblib  cnn_original_state_dict.pt  train_result.joblib  train_result2.joblib
utils/: load_data.py  ml_training.py  types.py
(+6 files in other folders)
